fixed width issues on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -80,7 +80,11 @@ a:visited {
 
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .column {
+  .threecol {
+    width: 100%;
+  }
+
+  .twocol {
     width: 100%;
   }
 }
